[package]
name = "util"
version = "0.1.1"
authors = ["zoe <zoe211@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = { version = "*", optional = true }
async-io = { version = "*", optional = true }
anyhow = { version = "*", optional = true }
pin-project-lite = { version = "*", optional = true }
quick-xml = { version = "*", optional = true }
bytes = { version = "*", optional = true }
serde_json = { version = "*", optional = true }

[features]
default = []
all = ["select", "timeout", "esb"]

select = ["futures-lite"]
timeout = ["async-io", "anyhow", "futures-lite", "pin-project-lite"]
esb = ["quick-xml", "bytes", "serde_json"]

[dev-dependencies]
futures-lite = { version = "*" }
async-io = { version = "*" }
anyhow = { version = "*" }
pin-project-lite = { version = "*" }
util = { path = ".", features = ["all"] }
